[workspace]
resolver = "3"
members = ["intar", "intar-scenario"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/intar"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.46", features = ["derive"] }
hcl-rs = "0.19.2"
rust-embed = "8.7.2"