[workspace]
resolver = "3"
members = ["intar", "intar-scenario", "intar-local-backend", "intar-agent"]

[profile.release.package.intar-agent]
opt-level = "z"
debug = 0

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/intar"
description = "Rootless QEMU scenario runner with dual-NIC networking and UDP LAN hub"
readme = "README.md"
keywords = ["qemu", "vm", "cloud-init", "cli", "scenarios"]
categories = ["command-line-utilities", "virtualization"]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
hcl-rs = "0.19.2"
rust-embed = "8.7.2"
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
serde_json = "1.0.143"
tempfile = "3.21.0"
which = "8.0.0"
reqwest = { version = "0.12.23", default-features = false, features = ["stream", "rustls-tls", "json"] }
futures-util = { version = "0.3.31", features = ["sink", "io"] }
os_info = "3.12.0"
directories = "6.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
ssh-key = { version = "0.7.0-rc.2", features = ["ed25519"] }
uuid = { version = "1.18.1", features = ["v4"] }
rand = "0.9.2"
async-trait = "0.1.89"
indicatif = "0.18.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "ansi"] }
sha2 = "0.10.9"
hex = "0.4.3"
indexmap = "2.6.0"
opentelemetry = { version = "0.30.0", default-features = false, features = ["metrics"] }
opentelemetry_sdk = { version = "0.30.0", default-features = false, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", default-features = false, features = ["http-json"] }
base64 = "0.22.1"
flate2 = "1.1.2"
glob = "0.3.3"
