[package]
name = "intar-scenario"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hcl-rs.workspace = true
serde.workspace = true
rust-embed.workspace = true
anyhow.workspace = true
